# chess-rankings

./: .coveragerc  .dockerignore  .env.local  .env.test  .gitignore  Dockerfile  Makefile  README.md  behave.ini  docker-compose.yaml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: test.yaml
src/main/: main.py
src/main/application/port/driven/api/: player_gateway.py
src/main/application/port/driven/file/: file_generator_service.py  file_storage_service.py
src/main/application/port/driven/ui/: ui_handler.py
src/main/application/port/driver/: generate_top_players_histories_file_driver_port.py  list_top_players_driver_port.py  list_top_players_histories_driver_port.py
src/main/application/port/driver/model/: category_validator.py
src/main/application/port/driver/model/command/: generate_top_players_histories_file_command.py  generate_top_players_histories_file_command_output.py
src/main/application/port/driver/model/query/: list_top_players_histories_query.py  list_top_players_histories_query_output.py  list_top_players_query.py  list_top_players_query_output.py
src/main/application/usecase/: generate_top_players_histories_file_use_case.py  list_top_players_histories_use_case.py  list_top_players_use_case.py
src/main/domain/: history.py  player.py  player_username.py
src/main/infra/adapter/driven/api/: player_api.py  player_gateway_adapter.py
src/main/infra/adapter/driven/console/: console_ui_handler.py
src/main/infra/adapter/driven/service/: csv_generator.py  file_generator_service_gateway.py
src/main/infra/adapter/driven/storage/: file_storage_service_gateway.py  storage_service.py
src/main/infra/adapter/driver/rest/: player_controller.py
src/main/infra/config/: custom_exception_handler.py  environment_settings.py  ioc.py
src/main/infra/config/database/: redis_config.py
src/main/infra/config/exception/: failed_dependency_exception.py
src/test/acceptance/features/: environment.py  generate_top_players_rating_histories_csv.feature  top_players.feature  top_players_rating_histories.feature
src/test/acceptance/features/steps/: common_steps.py  generate_top_players_rating_histories_csv_steps.py  top_players_rating_histories_steps.py  top_players_steps.py
src/test/integration/: test_list_top_players_histories_use_case.py  test_list_top_players_use_case.py
src/test/integration/mock/: mock_player_gateway.py  mock_ui_handler.py
src/test/resources/: mock_api.Dockerfile  mock_api.py
src/test/resources/json_data/: top_players.py  top_players_rating_histories.py
src/test/unit/: test_get_environment_variables.py
src/test/unit/domain/: test_history.py  test_player.py
(+13 files in other folders)
